--- a/MultithreadParallelSimulator/Makefile
+++ b/MultithreadParallelSimulator/Makefile
@@ -18,10 +18,10 @@ OUTPUT_FILE = out/output.txt
 all: $(TARGET)
 
 $(TARGET): $(OBJECTS)
-	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS)
+	$(CXX) $(CXXFLAGS) -o $@ $^
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp $(HEADERS)
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+	$(CXX) $(CXXFLAGS) -c $< -o $@ $(LDFLAGS)
 
 debug: CXXFLAGS := $(DEBUG_FLAGS)
 debug: clean $(TARGET)
