🏗️ Makefile and input parameters
Changed high, medium, low.txt with numbers in range of spatial dynamics. Changed Makefile of CUDA to make automatic tests with all different parameters based on the name of the target.

--- a/CudaParticlesSimulator/Makefile
+++ b/CudaParticlesSimulator/Makefile
@@ -1,39 +1,64 @@
 PATH := $(PATH):/usr/local/cuda-12.9/bin
 
-SRC_DIR = src
-OBJ_DIR = obj
-BIN_DIR = bin
-OUT_DIR = out
-LOAD_DIR = ..
+SRC_DIR := src
+OBJ_DIR := obj
+BIN_DIR := bin
+OUT_DIR := out
+LOAD_DIR := ..
+GEN_DIR := ../utils
 
-NVCC = nvcc
-NVCCFLAGS = -gencode arch=compute_61,code=sm_61 -O3
+LOADLEVELS := low medium high
+THREADSBLOCK := 32 64 128 256 512 1024
+
+EPOCHS_high := 100
+EPOCHS_medium := 100
+EPOCHS_low := 100
+PARTICLENUM_high := 20000
+PARTICLENUM_medium := 5000
+PARTICLENUM_low := 100
+
+NVCC := nvcc
+NVCCFLAGS := -gencode arch=compute_61,code=sm_61 -O3
 # DEBUG_FLAGS = -Wall -Wextra -O3 -std=c++17 -DDEBUG -fopenmp -g
 LDFLAGS += -I$(SRC_DIR)/include
 
 SOURCES = $(wildcard $(SRC_DIR)/*.cu)
 HEADERS = $(wildcard $(SRC_DIR)/include/*.cuh)
-OBJECTS = $(patsubst $(SRC_DIR)/%.cu,$(OBJ_DIR)/%.o,$(SOURCES))
-TARGET = $(BIN_DIR)/main
-OUTPUT_FILE = $(OUT_DIR)/output.txt
-ERROR_FILE = $(OUT_DIR)/error.txt
+OBJECTS = $(wildcard $(OBJ_DIR)/*.o)
+TARGETS = $(foreach level,$(LOADLEVELS),$(foreach threads,$(THREADSBLOCK),$(BIN_DIR)/main_$(level)_$(threads)))
+OUTPUT_FILES = $(wildcard $(OUT_DIR)/output*.txt)
+ERROR_FILES = $(wildcard $(OUT_DIR)/error*.txt)
 
 
 .PHONY: all clean run debug
 
-all: $(TARGET)
+all: $(TARGETS)
 
-$(TARGET): $(OBJECTS)
-	$(NVCC) $(NVCCFLAGS) -o $@ $^
+$(BIN_DIR)/main_%: $(SOURCES) $(HEADERS)
+# Retrieve parameters from target name: main_<level>_<threads>
+	$(eval PARAMS_ := $(patsubst $(BIN_DIR)/main_%,%,$@))
+	$(eval PARAMS = $(subst _, ,$(PARAMS_)))
+	$(eval level := $(word 1,$(PARAMS)))
+	$(eval threads := $(word 2,$(PARAMS)))
 
-$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cu $(HEADERS)
-	$(NVCC) $(NVCCFLAGS) -c $< -o $@  $(LDFLAGS)
+	$(NVCC) $(NVCCFLAGS) -o $@ $(SOURCES) $(LDFLAGS) -DPARTICLE_NUM=$(PARTICLENUM_$(level)) -DEPOCHS=$(EPOCHS_$(level)) -DTHREADS_PER_BLOCK=$(threads)
 
 debug: NVCCFLAGS := $(DEBUG_FLAGS)
 debug: clean $(TARGET)
 
 clean:
-	rm -f $(OBJECTS) $(TARGET) $(OUTPUT_FILE)
+	rm -f $(OBJECTS) $(TARGETS) $(OUTPUT_FILES) $(ERROR_FILES)
 
-test: all
-	./$(TARGET) 0 < $(LOAD_DIR)/low.txt > $(OUTPUT_FILE) 2> $(ERROR_FILE)
+test_%: $(BIN_DIR)/main_%
+# Retrieve parameters from target name: main_<level>_<threads>
+	$(eval PARAMS_ := $(patsubst test_%,%,$@))
+	$(eval PARAMS = $(subst _, ,$(PARAMS_)))
+	$(eval level := $(word 1,$(PARAMS)))
+	$(eval threads := $(word 2,$(PARAMS)))
+	./$< 0 < $(LOAD_DIR)/$(level).txt > $(OUT_DIR)/output_$(level)_$(threads).txt 2> $(OUT_DIR)/error_$(level)_$(threads).txt
+
+test: $(foreach level,$(LOADLEVELS),$(foreach threads,$(THREADSBLOCK),test_$(level)_$(threads)))
+	@echo "All tests completed."
+
+generate_%: $(GEN_DIR)/generate_config.py
+	python3 $< -e $(EPOCHS_$*) -p $(PARTICLENUM_$*) -o $(LOAD_DIR)/$*.txt
