♻️ Refactoring with Particle structure in CUDA

--- a/CudaParticlesSimulator/Makefile
+++ b/CudaParticlesSimulator/Makefile
@@ -9,11 +9,13 @@ GEN_DIR := ../utils
 
 LOADLEVELS := low medium high
 THREADSBLOCK := 32 64 128 256 512 1024
-VERSIONS := 0 1 2 3
+VERSIONS := 0 1 3
+#VERSIONS := 0 1 2 3
+TILE_WIDTH := 200 300 400
 
-EPOCHS_high := 30
-EPOCHS_medium := 30
-EPOCHS_low := 30
+EPOCHS_high := 10
+EPOCHS_medium := 10
+EPOCHS_low := 10
 PARTICLENUM_high := 20000
 PARTICLENUM_medium := 5000
 PARTICLENUM_low := 100
@@ -29,11 +31,13 @@ OBJECTS = $(wildcard $(OBJ_DIR)/*.o)
 TARGETS := $(foreach level,$(LOADLEVELS), \
 			$(foreach threads,$(THREADSBLOCK), \
 				$(foreach version,$(VERSIONS), \
-					$(BIN_DIR)/main_$(level)_$(threads)_$(version))))
+					$(foreach tile,$(TILE_WIDTH), \
+						$(BIN_DIR)/main_$(level)_$(threads)_$(version)_$(tile)))))
 TESTS 	= $(foreach level,$(LOADLEVELS), \
 			$(foreach threads,$(THREADSBLOCK), \
 				$(foreach version,$(VERSIONS), \
-					test_$(level)_$(threads)_$(version)))) 
+					$(foreach tile,$(TILE_WIDTH), \
+						test_$(level)_$(threads)_$(version)_$(tile)))))
 OUTPUT_FILES = $(wildcard $(OUT_DIR)/output*.txt)
 ERROR_FILES = $(wildcard $(OUT_DIR)/error*.txt)
 TIME_FILES = $(wildcard $(OUT_DIR)/time*.txt)
@@ -44,27 +48,29 @@ TIME_FILES = $(wildcard $(OUT_DIR)/time*.txt)
 all: $(TARGETS)
 
 $(BIN_DIR)/main_%: $(SOURCES) $(HEADERS)
-# Retrieve parameters from target name: main_<level>_<threads>_<version>
+# Retrieve parameters from target name: main_<level>_<threads>_<version>_<tile>
 	$(eval PARAMS_ := $(patsubst $(BIN_DIR)/main_%,%,$@))
 	$(eval PARAMS = $(subst _, ,$(PARAMS_)))
 	$(eval level := $(word 1,$(PARAMS)))
 	$(eval threads := $(word 2,$(PARAMS)))
 	$(eval version := $(word 3,$(PARAMS)))
+	$(eval tile := $(word 4,$(PARAMS)))
 
-	$(NVCC) $(NVCCFLAGS) -o $@ $(SOURCES) $(LDFLAGS) -DPARTICLE_NUM=$(PARTICLENUM_$(level)) -DDURATION=$(EPOCHS_$(level)) -DTHREADS_PER_BLOCK=$(threads) -DVERSION=$(version)
+	$(NVCC) $(NVCCFLAGS) -o $@ $(SOURCES) $(LDFLAGS) -DPARTICLE_NUM=$(PARTICLENUM_$(level)) -DDURATION=$(EPOCHS_$(level)) -DTHREADS_PER_BLOCK=$(threads) -DVERSION=$(version) -DTILE_WIDTH=$(tile)
 
 clean:
 	rm -f $(OBJECTS) $(TARGETS) $(OUTPUT_FILES) $(ERROR_FILES) $(TIME_FILES)
 
 test_%: $(BIN_DIR)/main_%
-# Retrieve parameters from target name: main_<level>_<threads>_<version>
+# Retrieve parameters from target name: main_<level>_<threads>_<version>_<tile>
 	$(eval PARAMS_ := $(patsubst test_%,%,$@))
 	$(eval PARAMS = $(subst _, ,$(PARAMS_)))
 	$(eval level := $(word 1,$(PARAMS)))
 	$(eval threads := $(word 2,$(PARAMS)))
 	$(eval version := $(word 3,$(PARAMS)))
+	$(eval tile := $(word 4,$(PARAMS)))
 
-	./$< $(OUT_DIR)/time.txt < $(LOAD_DIR)/$(level).txt > $(OUT_DIR)/output_$(level)_$(threads)_$(version).txt 2> $(OUT_DIR)/error_$(level)_$(threads)_$(version).txt
+	./$< $(OUT_DIR)/time.txt < $(LOAD_DIR)/$(level).txt > $(OUT_DIR)/output_$(level)_$(threads)_$(version)_$(tile).txt 2> $(OUT_DIR)/error_$(level)_$(threads)_$(version)_$(tile).txt
 
 test: $(TESTS)
 	@echo "All tests completed."
