--- a/CudaParticlesSimulator/Makefile
+++ b/CudaParticlesSimulator/Makefile
@@ -9,9 +9,7 @@ GEN_DIR := ../utils
 
 LOADLEVELS := low medium high
 THREADSBLOCK := 32 64 128 256 512 1024
-VERSIONS := 0 1 3
-#VERSIONS := 0 1 2 3
-TILE_WIDTH := 200 300 400
+VERSIONS := 0 1 2
 
 EPOCHS_high := 10
 EPOCHS_medium := 10
@@ -20,8 +18,9 @@ PARTICLENUM_high := 20000
 PARTICLENUM_medium := 5000
 PARTICLENUM_low := 100
 
+COMPUTE_CAPABILITY := $(shell if command -v nvidia-smi >/dev/null 2>&1; then nvidia-smi --query-gpu=compute_cap --format=csv,noheader | head -n 1 | sed 's/\.//g'; else echo 75; fi)
 NVCC := nvcc
-NVCCFLAGS := -gencode arch=compute_61,code=sm_61 -O3 -Wno-deprecated-gpu-targets
+NVCCFLAGS := -gencode arch=compute_$(COMPUTE_CAPABILITY),code=sm_$(COMPUTE_CAPABILITY) -O3 -Wno-deprecated-gpu-targets
 # DEBUG_FLAGS = -Wall -Wextra -O3 -std=c++17 -DDEBUG -fopenmp -g
 LDFLAGS += -I$(SRC_DIR)/include
 
@@ -31,13 +30,11 @@ OBJECTS = $(wildcard $(OBJ_DIR)/*.o)
 TARGETS := $(foreach level,$(LOADLEVELS), \
 			$(foreach threads,$(THREADSBLOCK), \
 				$(foreach version,$(VERSIONS), \
-					$(foreach tile,$(TILE_WIDTH), \
-						$(BIN_DIR)/main_$(level)_$(threads)_$(version)_$(tile)))))
+						$(BIN_DIR)/main_$(level)_$(threads)_$(version))))
 TESTS 	= $(foreach level,$(LOADLEVELS), \
 			$(foreach threads,$(THREADSBLOCK), \
 				$(foreach version,$(VERSIONS), \
-					$(foreach tile,$(TILE_WIDTH), \
-						test_$(level)_$(threads)_$(version)_$(tile)))))
+						test_$(level)_$(threads)_$(version))))
 OUTPUT_FILES = $(wildcard $(OUT_DIR)/output*.txt)
 ERROR_FILES = $(wildcard $(OUT_DIR)/error*.txt)
 TIME_FILES = $(wildcard $(OUT_DIR)/time*.txt)
@@ -48,29 +45,27 @@ TIME_FILES = $(wildcard $(OUT_DIR)/time*.txt)
 all: $(TARGETS)
 
 $(BIN_DIR)/main_%: $(SOURCES) $(HEADERS)
-# Retrieve parameters from target name: main_<level>_<threads>_<version>_<tile>
+# Retrieve parameters from target name: main_<level>_<threads>_<version>
 	$(eval PARAMS_ := $(patsubst $(BIN_DIR)/main_%,%,$@))
 	$(eval PARAMS = $(subst _, ,$(PARAMS_)))
 	$(eval level := $(word 1,$(PARAMS)))
 	$(eval threads := $(word 2,$(PARAMS)))
 	$(eval version := $(word 3,$(PARAMS)))
-	$(eval tile := $(word 4,$(PARAMS)))
 
-	$(NVCC) $(NVCCFLAGS) -o $@ $(SOURCES) $(LDFLAGS) -DPARTICLE_NUM=$(PARTICLENUM_$(level)) -DDURATION=$(EPOCHS_$(level)) -DTHREADS_PER_BLOCK=$(threads) -DVERSION=$(version) -DTILE_WIDTH=$(tile)
+	$(NVCC) $(NVCCFLAGS) -o $@ $(SOURCES) $(LDFLAGS) -DPARTICLE_NUM=$(PARTICLENUM_$(level)) -DDURATION=$(EPOCHS_$(level)) -DTHREADS_PER_BLOCK=$(threads) -DVERSION=$(version)
 
 clean:
-	rm -f $(OBJECTS) $(TARGETS) $(OUTPUT_FILES) $(ERROR_FILES) $(TIME_FILES)
+	rm -f $(OBJECTS) $(TARGETS) $(OUTPUT_FILES) $(ERROR_FILES) $(TIME_FILES) bin/main_*
 
 test_%: $(BIN_DIR)/main_%
-# Retrieve parameters from target name: main_<level>_<threads>_<version>_<tile>
+# Retrieve parameters from target name: main_<level>_<threads>_<version>
 	$(eval PARAMS_ := $(patsubst test_%,%,$@))
 	$(eval PARAMS = $(subst _, ,$(PARAMS_)))
 	$(eval level := $(word 1,$(PARAMS)))
 	$(eval threads := $(word 2,$(PARAMS)))
 	$(eval version := $(word 3,$(PARAMS)))
-	$(eval tile := $(word 4,$(PARAMS)))
 
-	./$< $(OUT_DIR)/time.txt < $(LOAD_DIR)/$(level).txt > $(OUT_DIR)/output_$(level)_$(threads)_$(version)_$(tile).txt 2> $(OUT_DIR)/error_$(level)_$(threads)_$(version)_$(tile).txt
+	./$< $(OUT_DIR)/time.txt < $(LOAD_DIR)/$(level).txt > $(OUT_DIR)/output_$(level)_$(threads)_$(version).txt 2> $(OUT_DIR)/error_$(level)_$(threads)_$(version).txt
 
 test: $(TESTS)
 	@echo "All tests completed."
