Optimizations fmaf CUDA

--- a/MultithreadParallelSimulator/Makefile
+++ b/MultithreadParallelSimulator/Makefile
@@ -1,5 +1,5 @@
 CXX = g++
-CXXFLAGS = -Wall -Wextra -O3 -std=c++17 -fopenmp
+CXXFLAGS = -Wall -Wextra -O3 -std=c++17 -fopenmp -g
 DEBUG_FLAGS = -Wall -Wextra -O3 -std=c++17 -DDEBUG -fopenmp -g
 LDFLAGS += -Isrc/include
 
